--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: https://vlusky.github.io
+      url: https://vlusky.github.io/
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
