--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/mdx": "^1.0.3",
 		"@astrojs/rss": "^2.2.0",
 		"@astrojs/svelte": "^2.0.2",
-		"astro": "^2.0.14",
+		"astro": "^3.0.13",
 		"svelte": "^3.55.1"
 	}
 }
