--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-	"name": "vlsk-site-astro",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astrojs/mdx": "^0.19.7",
-		"@astrojs/rss": "^2.2.0",
-		"@astrojs/svelte": "^2.0.2",
-		"astro": "^2.10.15",
-		"svelte": "^3.55.1"
-	}
+  "name": "vlsk-site-astro",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/rss": "^4.0.9",
+    "@astrojs/svelte": "^5.7.3",
+    "astro": "^4.16.10",
+    "svelte": "^5.1.15",
+    "typescript": "^5.6.3"
+  }
 }
